tests/compile_fail/add/misplaced_skip_attribute.stderr
error: `#[add(ignore)]` attribute can be placed only on struct fields
 --> tests/compile_fail/add/misplaced_skip_attribute.rs:2:1
  |
2 | #[add(ignore)]
  | ^

error: `#[add(skip)]` attribute can be placed only on enum fields
 --> tests/compile_fail/add/misplaced_skip_attribute.rs:6:1
  |
6 | #[add(skip)]
  | ^

error: `#[add(skip)]` attribute can be placed only on variant fields
  --> tests/compile_fail/add/misplaced_skip_attribute.rs:13:5
   |
13 |     #[add(skip)]
   |     ^
